# sprockit.io

./: .drone.yml  Cargo.toml  LICENSE  README.md  sprockit.io.code-workspace
.github/: CODEOWNERS  auto_assign.yml
.github/workflows/: pr-frontend.yml  pr-server.yml
games/maze/: Cargo.toml
games/maze/src/: error.rs  main.rs  maze.rs
games/maze/src/api/: map.rs  mod.rs  move_player.rs  start.rs
maze/: Cargo.toml
maze/src/: lib.rs
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: error.rs  main.rs  maze.rs
server/src/api/: map.rs  move_player.rs
web-ui/: .eslintrc.js  .gitignore  Dockerfile  jest.config.js  nuxt.config.js  package.json
web-ui/components/: AppContainer.vue  DragHandle.vue  Editor.vue  EditorPanel.vue  GamePanel.vue  HelpPanel.vue  Menu.spec.js  Menu.vue
web-ui/components/EditorComponents/: ExecuteButton.vue
web-ui/components/EditorPanelComponents/: Console.spec.js  Console.vue  Editor.spec.js  Editor.vue  ExecuteButton.vue  HeaderButton.spec.js  HeaderButton.vue
web-ui/components/GameContainer/: GameManager.vue
web-ui/components/GameContainer/Maze/: Maze.vue
web-ui/components/Games/: Maze.vue
web-ui/components/Header/: Header.spec.js  Header.vue  HeaderButton.spec.js  HeaderButton.vue
web-ui/docker/: entrypoint
web-ui/layouts/: default.vue
web-ui/pages/: index.vue
web-ui/plugins/: nuxt-codemirror-plugin.js  nuxt-vue-bus-plugin.js  nuxt-vuedraggable-resizable.js
web-ui/static/: favico.html  site.webmanifest
web-ui/static/css/: sprockit.css
web-ui/static/game/: maze.html  maze.js
web-ui/store/: console.js  index.js
web-ui/test/EditorPanelComponents/: Console.spec.js  ExecuteButton.spec.js
web-ui/tests/: jest.setup.js  utils.js
