[package]
name = "sprokit-game-maze"
version = "0.1.0"
authors = ["Michael Daffin <michael@daffin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
actix-http = "0.2.10"
actix-service = "0.4.2"
futures = "0.1.29"
failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.0"
serde = "1.0.101"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
derive_more = "0.15.0"

[dev-dependencies]
serde_json = "1.0.41"
bytes = "0.4.12"
